try to fix spacing on icon on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   top: 25px;
   right: 25px;
   height: 70px;
+  width: 70px;
 }
 
 .background__help-icon {
@@ -29,6 +30,7 @@
   top: 25px;
   right: 125px;
   height: 70px;
+  width: 70px;
 }
 
 @media only screen and (max-width: 600px) {
